import org.gradle.internal.os.OperatingSystem

buildscript {
    ext.versions = [
            java: JavaLanguageVersion.of(21),
            javafx: "21"
    ]
    ext.os = OperatingSystem.current()
    ext.arch = System.getProperty("os.arch")
}

allprojects {

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        configure(options) {
            options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
        }
    }
}

println("Operating System: name=${os.name} version=${os.version} arch=${arch}")
